--- a/docker/front.conf
+++ b/docker/front.conf
@@ -1,5 +1,5 @@
 upstream api {
-  server 0.0.0.0:$POST;
+  server 0.0.0.0:5700;
 }
 
 upstream public {
@@ -12,7 +12,7 @@ map $http_upgrade $connection_upgrade {
 }
 
 server {
-  listen 5700;
+  listen $POST;
   root /ql/static/dist;
   ssl_session_timeout 5m;
 
