--- a/docker/front.conf
+++ b/docker/front.conf
@@ -12,7 +12,7 @@ map $http_upgrade $connection_upgrade {
 }
 
 server {
-  listen $POST;
+  listen $PORT;
   root /ql/static/dist;
   ssl_session_timeout 5m;
 
